switched to typescript

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "webpack serve --config webpack.config.js --open --mode development",
-    "build": "webpack --config webpack.config.js --mode production",
+    "start": "webpack serve --config webpack.config.ts --open --mode development",
+    "build": "webpack --config webpack.config.ts --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -51,6 +51,8 @@
     "html-loader": "^4.2.0",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.5",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
